--- a/Jupyter/OOP_HomeWork.ipynb
+++ b/Jupyter/OOP_HomeWork.ipynb
@@ -90,7 +90,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Problem 2\n",
+    "# Fill in the class\n",
+    "\n",
+    "class Cylinder:\n",
+    "    \n",
+    "    def __init__(self,height=1,radius=1):\n",
+    "        self.height=height\n",
+    "        self.radius=radius\n",
+    "        \n",
+    "    def volume(self):\n",
+    "        return s\n",
+    "    \n",
+    "    def surface_area(self):\n",
+    "        pass"
+   ]
   }
  ],
  "metadata": {
