--- a/lect1_oop.ipynb
+++ b/lect1_oop.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# different attributes \n",
     "#here we have created my_dog instance \n",
-    "my_dog=Dog(breed='Lab',name='Razy',color='red',spot=True)"
+    "my_dog=Dog(breed='Lab',name='Razy',color='Red',spot=True)"
    ]
   },
   {
