--- a/Decorator/decorator.ipynb
+++ b/Decorator/decorator.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "def hello():\n",
-    "    print('this is hello()')\n",
+    "    print('This is hello()')\n",
     "    a=int(input('enter 1 or 0 : '))\n",
     "    def greet():\n",
     "        print('\\t this is a greet() function' )\n",
