--- a/Decorator/decorator.ipynb
+++ b/Decorator/decorator.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "def hello():\n",
     "    print('This is hello()')\n",
-    "    a=int(input('enter 1 or 0 : '))\n",
+    "    a=int(input('Enter 1 or 0 : '))\n",
     "    def greet():\n",
     "        print('\\t this is a greet() function' )\n",
     "        \n",
